--- a/templates/index.html
+++ b/templates/index.html
@@ -129,12 +129,12 @@
                 <div class="collapse" id="auxilios">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="">
+                      <a href="{% url 'auxiliocolaborador_list' %}">
                         <span class="sub-item">Lista de Auxílios</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a href="{% url 'auxiliocolaborador_create' %}">
                         <span class="sub-item">Adicionar Auxílio</span>
                       </a>
                     </li>
@@ -156,48 +156,13 @@
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="components/avatars.html">
-                        <span class="sub-item">Avatars</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/buttons.html">
-                        <span class="sub-item">Buttons</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/gridsystem.html">
-                        <span class="sub-item">Grid System</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/panels.html">
-                        <span class="sub-item">Panels</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/notifications.html">
-                        <span class="sub-item">Notifications</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/sweetalert.html">
-                        <span class="sub-item">Sweet Alert</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/font-awesome-icons.html">
-                        <span class="sub-item">Font Awesome Icons</span>
-                      </a>
-                    </li>
-                    <li>
                       <a href="components/simple-line-icons.html">
-                        <span class="sub-item">Simple Line Icons</span>
+                        <span class="sub-item">Listar Setores</span>
                       </a>
                     </li>
                     <li>
                       <a href="components/typography.html">
-                        <span class="sub-item">Typography</span>
+                        <span class="sub-item">Adicionar Setores</span>
                       </a>
                     </li>
                   </ul>
@@ -271,12 +236,12 @@
                   <ul class="nav nav-collapse">
                     <li>
                       <a href="maps/googlemaps.html">
-                        <span class="sub-item">Google Maps</span>
+                        <span class="sub-item">Listar Orçamentos</span>
                       </a>
                     </li>
                     <li>
                       <a href="maps/jsvectormap.html">
-                        <span class="sub-item">Jsvectormap</span>
+                        <span class="sub-item">Adicionar Orçamento</span>
                       </a>
                     </li>
                   </ul>
@@ -393,23 +358,7 @@
             class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom"
           >
             <div class="container-fluid">
-              <nav
-                class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex"
-              >
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <button type="submit" class="btn btn-search pe-1">
-                      <i class="fa fa-search search-icon"></i>
-                    </button>
-                  </div>
-                  <input
-                    type="text"
-                    placeholder="Pesquisar ..."
-                    class="form-control"
-                  />
-                </div>
-              </nav>
-
+             
               <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
                 <li
                   class="nav-item topbar-icon dropdown hidden-caret d-flex d-lg-none"
@@ -424,17 +373,7 @@
                   >
                     <i class="fa fa-search"></i>
                   </a>
-                  <ul class="dropdown-menu dropdown-search animated fadeIn">
-                    <form class="navbar-left navbar-form nav-search">
-                      <div class="input-group">
-                        <input
-                          type="text"
-                          placeholder="Pesquisar ..."
-                          class="form-control"
-                        />
-                      </div>
-                    </form>
-                  </ul>
+                  
                 </li>
                 
                 <li class="nav-item topbar-icon dropdown hidden-caret">
