--- a/contract/templates/linhas/linhaorcamentaria_form.html
+++ b/contract/templates/linhas/linhaorcamentaria_form.html
@@ -7,7 +7,7 @@
             <div class="col-lg-10">
                 <div class="card">
                     <div class="card-header bg-primary text-white text-center">
-                        <h4 class="card-title mb-0">{% if object %}Editar{% else %}Adicionar{% endif %} Linha Orçamentária</h4>
+                        <h4 class="card-title mb-0">{% if form.instance.pk %}Editar Linha Orçamentária{% else %}Adicionar Linha Orçamentária{% endif %}</h4>
                     </div>
                     <div class="card-body">
                         <form method="post">
@@ -15,84 +15,69 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="id_classe">Classe</label>
-                                        {{ form.classe }}
+                                        {{ form.classe.label_tag }} {{ form.classe }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_custo_despesa">Custo/Despesa</label>
-                                        {{ form.custo_despesa }}
+                                        {{ form.custo_despesa.label_tag }} {{ form.custo_despesa }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_centro_custo_gestor">Centro Custo Gestor</label>
-                                        {{ form.centro_custo_gestor }}
+                                        {{ form.centro_custo_gestor.label_tag }} {{ form.centro_custo_gestor }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_centro_custo_solicitante">Centro Custo Solicitante</label>
-                                        {{ form.centro_custo_solicitante }}
+                                        {{ form.centro_custo_solicitante.label_tag }} {{ form.centro_custo_solicitante }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_descricao_resumida">Descrição Resumida</label>
-                                        {{ form.descricao_resumida }}
+                                        {{ form.descricao_resumida.label_tag }} {{ form.descricao_resumida }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_objeto">Objeto</label>
-                                        {{ form.objeto }}
+                                        {{ form.objeto.label_tag }} {{ form.objeto }}
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="id_classificacao_orcamento">Classificação Orçamentária</label>
-                                        {{ form.classificacao_orcamento }}
+                                        {{ form.classificacao_orcamento.label_tag }} {{ form.classificacao_orcamento }}
+                                   
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_possivel_fiscal">Possível Fiscal</label>
-                                        {{ form.possivel_fiscal }}
+                                        {{ form.possivel_fiscal.label_tag }} {{ form.possivel_fiscal }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_ano_orcamento">Ano Orçamento</label>
-                                        {{ form.ano_orcamento }}
+                                        {{ form.ano_orcamento.label_tag }} {{ form.ano_orcamento }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_tipo_contrato">Tipo de Contrato</label>
-                                        {{ form.tipo_contrato }}
+                                        {{ form.tipo_contrato.label_tag }} {{ form.tipo_contrato }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_status_linha_orcamentaria">Status da Linha Orçamentária</label>
-                                        {{ form.status_linha_orcamentaria }}
+                                        {{ form.status_linha_orcamentaria.label_tag }} {{ form.status_linha_orcamentaria }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_tipo_provavel_contratacao">Tipo Provável Contratação</label>
-                                        {{ form.tipo_provavel_contratacao }}
+                                        {{ form.tipo_provavel_contratacao.label_tag }} {{ form.tipo_provavel_contratacao }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_valor_orcado">Valor Orçado</label>
-                                        {{ form.valor_orcado }}
+                                        {{ form.valor_orcado.label_tag }} {{ form.valor_orcado }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_status_elaboracao_tr">Status Elaboração TR</label>
-                                        {{ form.status_elaboracao_tr }}
+                                        {{ form.status_elaboracao_tr.label_tag }} {{ form.status_elaboracao_tr }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_necessidade_contratacao">Necessidade de Contratação</label>
-                                        {{ form.necessidade_contratacao }}
+                                        {{ form.necessidade_contratacao.label_tag }} {{ form.necessidade_contratacao }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_status_processo">Status do Processo</label>
-                                        {{ form.status_processo }}
+                                        {{ form.status_processo.label_tag }} {{ form.status_processo }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_status_contratacao">Status da Contratação</label>
-                                        {{ form.status_contratacao }}
+                                        {{ form.status_contratacao.label_tag }} {{ form.status_contratacao }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="id_obs_contrato">Observações</label>
-                                        {{ form.obs_contrato }}
+                                        {{ form.obs_contrato.label_tag }} {{ form.obs_contrato }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-action mt-3">
-                                <button type="submit" class="btn btn-success w-100">{% if object %}Salvar{% else %}Adicionar{% endif %}</button>
-                                <a href="{% url 'linhaorcamentaria_list' %}" class="btn btn-danger w-100 mt-2">Cancelar</a>
+                            <div class="text-center mt-4">
+                                <button type="submit" class="btn btn-success w-40 mx-2">
+                                    {% if form.instance.pk %}Salvar{% else %}Adicionar{% endif %}
+                                </button>
+                                <a href="{% url 'linhaorcamentaria_list' %}" class="btn btn-danger w-40 mx-2">Cancelar</a>
                             </div>
                         </form>
                     </div>
